# IMRNNs

./: .gitignore  DIME.py  IMRNN_train.py  README.md  SearchAdaptor.py  pyproject.toml  requirements.txt
baseline/: Hypencoder.py
checkpoints/pretrained/e5/: imrnns-e5-fiqa.pt  imrnns-e5-hotpotqa.pt  imrnns-e5-msmarco.pt  imrnns-e5-nq.pt  imrnns-e5-scifact.pt  imrnns-e5-webis-touche2020.pt
checkpoints/pretrained/minilm/: imrnns-minilm-fiqa.pt  imrnns-minilm-hotpotqa.pt  imrnns-minilm-msmarco.pt  imrnns-minilm-nq.pt  imrnns-minilm-scifact.pt  imrnns-minilm-trec-covid.pt  imrnns-minilm-webis-touche2020.pt
huggingface/: README.md  config.json
scripts/: convert_legacy_checkpoints.py  hf_end_to_end_demo.py  minimal_eval.py  publish_hf.py
src/imrnns/: __init__.py  adapter.py  api.py  assets.py  beir_data.py  caching.py  checkpoints.py  cli.py  data.py  encoders.py  evaluation.py  hub.py  model.py  training.py
