[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imrnns"
version = "0.1.0"
description = "Professional training and evaluation package for IMRNNs over cached dense retrieval embeddings."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "beir>=2.0.0",
  "numpy>=1.24,<2.0",
  "scikit-learn>=1.3,<1.6",
  "sentence-transformers>=3.0.0",
  "torch>=2.2,<2.6",
  "tqdm>=4.66",
  "transformers>=4.40,<4.50",
]

[project.scripts]
imrnns = "imrnns.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
